Fix alert bar CTA button padding when wrapping under text.

--- a/assets/scss/alert-bar.scss
+++ b/assets/scss/alert-bar.scss
@@ -1,6 +1,6 @@
 .alert-bar {
 	position: relative;
-	padding: 0.5rem 5%;
+	padding: 0 5%;
 	width: 100%;
 	background-color: #F03770;
 	color: #fff;
@@ -45,7 +45,8 @@
 	}
 
 	p {
-		margin: 0;
+		margin: 0.6rem 0.5rem 0;
+		display: inline-block;
 	}
 
 	a {
@@ -111,8 +112,8 @@
 		background: #fff;
 		color: #F03770;
 		padding: .2rem 0.5rem;
-		margin-left: 1rem;
 		text-transform: none;
+		margin: 0.6rem 0.5rem;
 	}
 }
 
